# neurodivergent-comms-mcp

./: CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  INSTALL.md  LICENSE  README.md  pyproject.toml
src/: __init__.py  server.py
src/resources/: context-interpretation.md  meeting-structure.md  message-clarity.md  tone-calibration.md
